--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,8 +10,10 @@ body {
   font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
-.titulo {
-  padding-bottom: 20px;
+.subtitulo {
+  padding-bottom: 50px;
+  font-size: 16px;
+  color:#86888a;
 }
 
 .tries{
