--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,42 @@
-<h1 class="text-center titulo">{{title}}</h1>
-
-<div class="container">
-  <div class="row tries" *ngFor="let try of tries; let i = index">
-      <app-word class="col"
-          [letter]="letter"
-          [row]="i"
-          [pos]="j"
-          *ngFor="let position of positions; let j = index">
-      </app-word>
-  </div>
+<div class="text-center">
+  <h1>{{title}}</h1>
+  <span class="subtitulo">(just another wordle clone)</span>
 </div>
 
-<div class="container   d-flex  justify-content-center" id="formulario">
-  <div class="row">
-    <div class="mb-2 col">
-      <input type="text" class="form-control col-2" id="input" placeholder="palabra">
+<div *ngIf="started;else elseblock">
+  <div class="container mt-5">
+    <div class="row tries" *ngFor="let try of tries; let i = index">
+        <app-word class="col"
+            [letter]="letter"
+            [row]="i"
+            [pos]="j"
+            *ngFor="let position of positions; let j = index">
+        </app-word>
     </div>
-    <button type="button" class="btn btn-primary ps-6 col-4">Probar</button>
+  </div>
+
+  <div class="container   d-flex  justify-content-center" id="formulario">
+    <div class="row">
+      <div class="mb-2 col">
+        <input type="text" class="form-control col-2" id="word" placeholder="palabra">
+      </div>
+      <button type="button" class="btn btn-primary ps-6 col-4" (click)="check_word()">Probar</button>
+    </div>
   </div>
 </div>
+
+<ng-template #elseblock>
+  <div class="container text-center col-7">
+
+    <div class="mt-5">
+      <label for="tries" class="form-label">Reintentos</label>
+      <input type="number" class="form-control" id="tries" min=2 max=12 value="6">
+    </div>
+    <div class="mt-3">
+      <label for="wlength" class="form-label">nº de letras</label>
+      <input type="number" class="form-control" id="wlength" min=3 max=7 value="5">
+    </div>
+
+    <button type="button" class="btn btn-primary mt-3" (click)="start_game()">Jugar</button>
+  </div>
+</ng-template>
