Modificado el componente
Inicialmente iba a haber 2 componentes (word+letter), pero se va a quedar
en uno sólo (letter). Toda la lógica la hago en el app-component, que tiene
más lógica.

Ahora se muestra la palabra a probar, pero sin la lógica de los colores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,12 @@
 <div *ngIf="started;else elseblock">
   <div class="container mt-5">
     <div class="row tries" *ngFor="let try of tries; let i = index">
-        <app-word class="col"
-            [letter]="letter"
+        <app-letter class="col"
+            [letter]="tries[i][j]"
             [row]="i"
             [pos]="j"
             *ngFor="let position of positions; let j = index">
-        </app-word>
+        </app-letter>
     </div>
   </div>
 
