--- a/src/app/components/letter/letter.component.css
+++ b/src/app/components/letter/letter.component.css
@@ -1,6 +1,8 @@
 .letter {
   min-width: 58px;
+  max-width: 58px;
   min-height: 55px;
+  max-height: 55px;
   border:2px solid #d3d6da;
   padding: 14px 20px;
   border-radius: 5px;
