--- a/src/app/components/letter/letter.component.html
+++ b/src/app/components/letter/letter.component.html
@@ -1,2 +1,2 @@
 
-<div class="letter" id="row_{{row}}_pos_{{pos}}">{{letter}}</div>
+<div class="letter text-center align-middle {{letter[1]}}"><span>{{letter[0]}}</span></div>
