--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div *ngIf="started;else elseblock">
-  <div class="container mt-5">
+  <div class="container mt-5 justify-content-center col-6">
     <div class="row tries" *ngFor="let try of tries; let i = index">
         <app-letter class="col"
             [letter]="tries[i][j]"
@@ -13,28 +13,28 @@
     </div>
   </div>
 
-  <div class="container   d-flex  justify-content-center" id="formulario">
+  <div class="container mb-2 justify-content-center col-1">
     <div class="row">
-      <div class="mb-2 col">
-        <input type="text" class="form-control col-2" id="word" placeholder="palabra" (keyup)="check_input($event)" [attr.maxlength]="conf_letters">
-      </div>
-      <!-- <button type="button" class="btn btn-primary ps-6 col-4" (click)="check_input()">Probar</button> -->
+        <input type="text" class="form-control" id="word" placeholder="palabra" (keyup)="check_input($event)" [attr.maxlength]="conf_letters">
     </div>
   </div>
+
+  <app-keyboard [keyboard_status]="keyboard"></app-keyboard>
 </div>
 
 <ng-template #elseblock>
-  <div class="container text-center col-7">
+  <div class="container text-center col-1">
+    <div class="row">
+      <div class="mt-5">
+        <label for="tries" class="form-label">Reintentos</label>
+        <input type="number" class="form-control" id="tries" min=2 max=12 value="6">
+      </div>
+      <div class="mt-3">
+        <label for="wlength" class="form-label">nº de letras</label>
+        <input type="number" class="form-control" id="wlength" min=4 max=7 value="5">
+      </div>
 
-    <div class="mt-5">
-      <label for="tries" class="form-label">Reintentos</label>
-      <input type="number" class="form-control" id="tries" min=2 max=12 value="6">
+      <button type="button" class="btn btn-primary mt-3" (click)="start_game()">Jugar</button>
     </div>
-    <div class="mt-3">
-      <label for="wlength" class="form-label">nº de letras</label>
-      <input type="number" class="form-control" id="wlength" min=3 max=7 value="5">
-    </div>
-
-    <button type="button" class="btn btn-primary mt-3" (click)="start_game()">Jugar</button>
   </div>
 </ng-template>
