Mejoras en el aspecto gráfico
- Ya no uso las columnas de Bootstrap para las palabras.
- Mejorado un poco el css general
- Al terminar la partida el teclado se resetea

--- a/src/app/components/keyboard/keyboard.component.css
+++ b/src/app/components/keyboard/keyboard.component.css
@@ -1,25 +1,14 @@
-.letter {
-  min-width: 58px;
-  max-width: 58px;
-  min-height: 55px;
-  max-height: 55px;
-  border: 1px solid #d3d6da;
+.keybtn {
+  min-width: 30px;
+  min-height: 58px;
+  /* border: 1px solid #d3d6da; */
+  background-color: #d3d6da;
   border-radius: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
+  margin: 5px;
 
   font-size: 18px;
-
   font-weight: bold;
   font-family: monospace;
-  align-items: center;
-  position: relative;
-}
-
-.keybtn {
-  border: 1px solid #d3d6da;
-  border-radius: 5px;
 }
 
 .ok {
