--- a/src/app/components/letter/letter.component.html
+++ b/src/app/components/letter/letter.component.html
@@ -1,2 +1,4 @@
 
-<div class="letter text-center align-middle {{letter[1]}}"><span>{{letter[0]}}</span></div>
+<!-- <div class="letter text-center align-middle {{letter[1]}}"><span>{{letter[0]}}</span></div> -->
+
+<div class="letter {{letter[1]}}">{{letter[0]}}</div>
