--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
 </div>
 
 <div *ngIf="started;else elseblock">
-  <div class="container mt-5 justify-content-center col-6">
-    <div class="row tries" *ngFor="let try of tries; let i = index">
-        <app-letter class="col"
+  <div class="container text-center p-2 col-7">
+    <div class="d-flex justify-content-center tries" *ngFor="let try of tries; let i = index">
+        <app-letter class=""
             [letter]="tries[i][j]"
             *ngFor="let position of positions; let j = index">
         </app-letter>
