--- a/src/app/components/keyboard/keyboard.component.html
+++ b/src/app/components/keyboard/keyboard.component.html
@@ -1,11 +1,9 @@
 
-<div class="container text-center p-2 col-7">
-  <div class="">
-    <div class="" *ngFor="let row of keyboard; let i = index">
-        <button type="button" class="btn keybtn {{keyboard_status[keyboard[i][j]]}}"
-            *ngFor="let letter of row; let j = index">
-            {{keyboard[i][j]}}
-        </button>
-    </div>
+<div class="container text-center col-7">
+  <div class="" *ngFor="let row of keyboard; let i = index">
+    <button type="button" class="btn keybtn {{keyboard_status[keyboard[i][j]]}}"
+        *ngFor="let letter of row; let j = index">
+        {{keyboard[i][j]}}
+    </button>
   </div>
 </div>
