--- a/src/app/components/letter/letter.component.css
+++ b/src/app/components/letter/letter.component.css
@@ -1,31 +1,34 @@
 .letter {
   min-width: 58px;
-  max-width: 58px;
   min-height: 55px;
-  max-height: 55px;
   border: 2px solid #d3d6da;
-  padding: 14px 20px;
   border-radius: 5px;
-  font-size: 28px;
+  margin-right: 10px;
 
-  font-weight: bold;
   font-family: monospace;
+  font-size: 28px;
+  font-weight: bold;
+
   /* vertical alignment */
-  display: flex;
-  align-items: center;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 .ok {
   background-color: #6aaa64;
+  border: 2px solid #6aaa64;
   color: white;
 }
 
 .exists {
   background-color: #c9b458;
+  border: 2px solid #c9b458;
   color: white;
 }
 
 .no {
   background-color: #86888a;
+  border: 2px solid #86888a;
   color: white;
 }
