Ahora el teclado de pantalla  es funcional 100%
La tecla de borrado se podría poner un icono, pero para facilitar el código
lo dejaré como "DEL" y pista.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <app-keyboard [keyboard_status]="keyboard"></app-keyboard>
+  <app-keyboard [keyboard_status]="keyboard" (pulsado)="check_pulsado($event)"></app-keyboard>
 </div>
 
 <ng-template #elseblock>
