--- a/src/app/components/keyboard/keyboard.component.css
+++ b/src/app/components/keyboard/keyboard.component.css
@@ -1,14 +1,20 @@
 .keybtn {
-  min-width: 30px;
-  min-height: 58px;
+  min-width: 20px;
+  /* max-width: 10%; */
+  min-height: 48px;
   /* border: 1px solid #d3d6da; */
   background-color: #d3d6da;
   border-radius: 5px;
   margin: 5px;
+  padding: 5px;
 
   font-size: 18px;
   font-weight: bold;
   font-family: monospace;
+}
+
+.Enter, .DEL {
+  font-size:15px!important;
 }
 
 .ok {
