--- a/src/app/components/letter/letter.component.css
+++ b/src/app/components/letter/letter.component.css
@@ -1,9 +1,11 @@
 .letter {
-  min-width: 58px;
-  min-height: 55px;
+  min-width: 45px;
+  max-width: 55px;
+  min-height: 42px;
+  max-height: 52px;
   border: 2px solid #d3d6da;
   border-radius: 5px;
-  margin-right: 10px;
+  margin-right: 8px;
 
   font-family: monospace;
   font-size: 28px;
