--- a/src/app/components/keyboard/keyboard.component.html
+++ b/src/app/components/keyboard/keyboard.component.html
@@ -1,7 +1,7 @@
 
-<div class=" text-center col-12">
-  <div class="fila_{{i}}" *ngFor="let row of keyboard; let i = index">
-    <button type="button" class="btn keybtn {{keyboard_status[keyboard[i][j]]}} {{keyboard[i][j]}}" (click)="send_to_father(keyboard[i][j])"
+<div class="text-center">
+  <div class="d-flex justify-content-center fila fila_{{i}}" *ngFor="let row of keyboard; let i = index">
+    <button type="button" class="d-inline-flex keybtn {{keyboard_status[keyboard[i][j]]}} {{keyboard[i][j]}}" (click)="send_to_father(keyboard[i][j])"
         *ngFor="let letter of row; let j = index">
         {{keyboard[i][j]}}
     </button>
