--- a/src/app/components/letter/letter.component.css
+++ b/src/app/components/letter/letter.component.css
@@ -1,18 +1,15 @@
 .letter {
-  min-width: 45px;
-  max-width: 55px;
-  min-height: 42px;
-  max-height: 52px;
+  width: 50px;
+  height: 50px;
   border: 2px solid #d3d6da;
   border-radius: 5px;
-  margin-right: 8px;
 
   font-family: monospace;
   font-size: 25px;
   font-weight: bold;
 
+  display:grid;
   /* vertical alignment */
-  display:flex;
   justify-content:center;
   align-items:center;
 }
