--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 
 <div *ngIf="started;else elseblock">
   <div class="container text-center p-2 col-12 col-md-4">
-    <div class="tries d-flex justify-content-center" style="grid-template-columns: repeat({{conf_letters}},auto)" *ngFor="let try of tries; let i = index">
+    <div id="alert_place"></div>
+    <div id="words" class="tries d-flex justify-content-center" style="grid-template-columns: repeat({{conf_letters}},auto)" *ngFor="let try of tries; let i = index">
         <app-letter
             [letter]="tries[i][j]"
             *ngFor="let position of try; let j = index">
@@ -26,12 +27,30 @@
   <div class="container text-center col-4  col-md-2 col-xl-1">
     <div class="row">
       <div class="mt-5">
-        <label for="tries" class="form-label">Reintentos</label>
-        <input type="number" class="form-control" id="tries" min=2 max=12 value="6">
+        <label for="tries" class="form-label">Intentos</label>
+        <select class="form-select" id="tries">
+          <!-- <option *ngFor="let option of option_tries" *ngIf="option === '6'; then 'selected'">{{option}}</option> -->
+          <!-- FIXME: arreglar esto -->
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+          <option selected>6</option>
+          <option>7</option>
+          <option>8</option>
+          <option>9</option>
+          <option>10</option>
+          <option>11</option>
+          <option>12</option>
+        </select>
       </div>
       <div class="mt-3">
         <label for="wlength" class="form-label">nº de letras</label>
-        <input type="number" class="form-control" id="wlength" min=4 max=7 value="5">
+        <select class="form-select" id="wlength">
+          <option>4</option>
+          <option selected>5</option>
+          <option>6</option>
+          <option>7</option>
+        </select>
       </div>
 
       <button type="button" class="btn btn-primary mt-3" (click)="start_game()">Jugar</button>
