Cambiado el aviso por un modal.
Ha dado bastantes problemas para ocultarlo, y no sé por qué. El "modal.hide()" por
javascript no funcionaba bien.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,3 +57,12 @@
     </div>
   </div>
 </ng-template>
+
+<div class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="alert alert-danger text-center" role="alert">
+        ¡La palabra no existe!
+        <button hidden type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="closeModal"></button>
+      </div>
+  </div>
+</div>
